# st_llm

./: .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
app/: auth0_example.py  auth_config.py  st_main.py  streamlit_app.py
app/llm/: prompt_generator.py
data/: sandbox.py
