[project]
name = "st-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=2.18.2",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "ollama>=0.4.4",
    "osmnx>=2.0.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pydeck>=0.9.1",
    "ruff>=0.8.3",
    "streamlit>=1.41.1",
]
