[project]
name = "upd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash-bootstrap-components>=1.6.0",
    "dash-design-kit>=0.0.1",
    "dash>=2.18.2",
    "duckdb>=1.1.3",
    "folium>=0.19.2",
    "ibis>=3.3.0",
    "jupyterlab>=4.3.1",
    "lonboard>=0.10.3",
    "ollama>=0.4.5",
    "osmnx>=2.0.0",
    "overturemaps>=0.12.0",
    "pandas>=2.2.3",
    "pandera>=0.22.0",
    "plotly>=5.24.1",
    "polars>=1.18.0",
    "pydeck>=0.9.1",
    "streamlit-folium>=0.24.0",
    "streamlit>=1.41.1",
]
